feat(registrar): добавлен отчёт по талонам на текущий день
